--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!doctype html>
+
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:500px;}
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
 <form action="//codes.us12.list-manage.com/subscribe/post?u=ff6ce6abeecdca227b2ddada0&amp;id=7ef657a077" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>SUSAN HAMILTON'S TECHNOLOGY CONERN</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+	<h2>SUSAN HAMILTON'S TECHNOLOGY CONCERN</h2>
+
+<p>SUSAN HAMILTON’S TECHNOLOGY CONCERN is a sporadically recurring
+newsletter hastily written and edited by the friends and family of one
+SUSAN HAMILTON (1981–2006), who died as she lived (in a house). The
+  value proposition of signing up is this: each newsletter might contain</p>
+
+<ul>
+  <li>A crossword written by someone you know</li>
+
+  <li>Letters from another magazine&rsquo;s editor</li>
+
+  <li>Sobituaries (sexy obituaries)</li>
+
+  <li>IRL post-mortems</li>
+
+  <li>The last screenshot PNG someone took</li>
+
+  <li>Speculative fiction: a real &ldquo;what if?&rdquo;</li>
+
+  <li>Specular fiction: stories about mirrors and what they show when nobody&rsquo;s around</li>
+</ul>
+
+
+<p>The newsletter, previously laid out by the hands of printers who
+demanded increasingly higher bribes, was converted into its present
+electronic form not that long ago and then massively disseminated for
+selfish material reasons. All you have to do is cough up an email
+address and a CB radio handle.</p>
+
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
 </label>
