--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ SUSAN HAMILTON (1981–2006), who died as she lived (in a house). The
 demanded increasingly higher bribes, was converted into its present
 electronic form not that long ago and then massively disseminated for
 selfish material reasons. All you have to do is cough up an email
-address and a CB radio handle.</p>
+address and a CB radio handle (which might just be your name [but
+ideally is your CB radio name]).</p>
 
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
