--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="mc_embed_signup">
 <form action="//codes.us12.list-manage.com/subscribe/post?u=ff6ce6abeecdca227b2ddada0&amp;id=7ef657a077" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>SUSAN HAMILTON'S TECHNOLOGY CONCERN</h2>
+	<h2>SUSAN HAMILTON&rsquo;S TECHNOLOGY CONCERN</h2>
 
 <p>SUSAN HAMILTON’S TECHNOLOGY CONCERN is a sporadically recurring
 newsletter hastily written and edited by the friends and family of one
