--- a/index.html
+++ b/index.html
@@ -57,6 +57,35 @@ ideally is your CB radio name]).</p>
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ff6ce6abeecdca227b2ddada0_7ef657a077" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+
+<h2>Are you a writer? (No? Do you want to be a writer?)</h2>
+
+<p>We need you! Please see
+our <a href="https://docs.google.com/document/d/1_eWlxgRkZj-qC6QdBgtMJwXglCuA0st8mr-fDVb22m4/edit?usp=sharing">CALL
+TO ARMS</a>. Our first deadline will be Friday November 27th. More
+details inside. You could literally submit a sentence and we will find
+a way to publish it.</p>
+
 </form>
 </div>
 
