--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<html>
+<head>
+<title>Susan Hamilton’s Technology Concern</title>
+<meta description="A newsletter.">
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
@@ -7,6 +11,9 @@
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
+</head>
+
+<body>
 <div id="mc_embed_signup">
 <form action="//codes.us12.list-manage.com/subscribe/post?u=ff6ce6abeecdca227b2ddada0&amp;id=7ef657a077" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -88,5 +95,6 @@ a way to publish it.</p>
 
 </form>
 </div>
-
 <!--End mc_embed_signup-->
+</body>
+</html>
