--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@ ideally is your CB radio name]).</p>
 <hr>
 <hr>
 
-<h2>Are you a writer? (No? Do you want to be a writer?)</h2>
+<h2>Are you a writer? No? Do you want to be a writer?</h2>
 
-<p>We need you! Please see
+<p>You see, we have a newsletter but no writing. Please see
 our <a href="https://docs.google.com/document/d/1_eWlxgRkZj-qC6QdBgtMJwXglCuA0st8mr-fDVb22m4/edit?usp=sharing">CALL
-TO ARMS</a>. Our first deadline will be Friday November 27th. More
-details inside. You could literally submit a sentence and we will find
-a way to publish it.</p>
+TO ARMS</a> if you are interested in submitting something. Our first
+deadline will be Friday November 27th. Have a sentence? Email us.
+Draft of book lying in your desk drawer? We’ll help you edit and
+serialize it.</p>
 
 </form>
 </div>
