--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ SUSAN HAMILTON (1981–2006), who died as she lived (in a house). The
 
   <li>Sobituaries (sexy obituaries)</li>
 
-  <li>IRL post-mortems</li>
+  <li>Life experience post-mortems</li>
 
-  <li>The last screenshot PNG someone took</li>
+  <li>The last computer screenshot you took</li>
 
-  <li>Speculative fiction: a real &ldquo;what if?&rdquo;</li>
+  <li>Speculative fiction</li>
 
-  <li>Specular fiction: stories about mirrors and what they show when nobody&rsquo;s around</li>
+  <li>Specular fiction: stories about mirrors</li>
 </ul>
 
 
