--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ ideally is your CB radio name]).</p>
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ff6ce6abeecdca227b2ddada0_7ef657a077" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
+
+    <p><img src="http://i.imgur.com/tAKWmB5.png" alt="sign up today"></p>
+
 <hr>
 <hr>
 <hr>
