--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <p>SUSAN HAMILTON’S TECHNOLOGY CONCERN is a sporadically recurring
 newsletter hastily written and edited by the friends and family of one
-SUSAN HAMILTON (1981–2006), who died as she lived (in a house). The
+SUSAN HAMILTON (1981–2006), who died as she lived.* The
   value proposition of signing up is this: each newsletter might contain</p>
 
 <ul>
@@ -64,6 +64,8 @@ ideally is your CB radio name]).</p>
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ff6ce6abeecdca227b2ddada0_7ef657a077" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
+
+    <p><small>* In a house.</small></p>
 
     <p><img src="http://i.imgur.com/tAKWmB5.png" alt="sign up today"></p>
 
