--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ ideally is your CB radio name]).</p>
 <h2>Are you a writer? No? Do you want to be a writer?</h2>
 
 <p>You see, we have a newsletter but no writing. Please see
-our <a href="https://docs.google.com/document/d/1_eWlxgRkZj-qC6QdBgtMJwXglCuA0st8mr-fDVb22m4/edit?usp=sharing">CALL
+our <a href="https://docs.google.com/document/d/e/2PACX-1vTPumBWgcNWbPhAotRqfrnGlhZBVKIqMD9V55fMlwPldOV2R53MyayH2H8vfiYNzrUU0vKB0JkOkp1q/pub">CALL
 TO ARMS</a> if you are interested in submitting something. Our first
 deadline will be Friday November 27th. Have a sentence? Email us.
 Draft of book lying in your desk drawer? We’ll help you edit and
